--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 header{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     margin-top: 70px;
 }
 .attributes{
@@ -49,11 +49,9 @@ border-radius: 20px;
     
 }
 .sortBtn{
-    margin-top: 0px;
-   margin-left: 48%;
-   margin-bottom: 50px;
-   padding: 30px;
-   border-radius: 60px;
+    padding: 20px;
+    border-radius: 20px;
+    margin-right: 20px;
 }
    
 .my-class{ 
